делает геометрию изображениям

--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
     <!--Преимущества-->
     <section class="benefits section no-padding">
         <div class="container">
-            <ul class="list">
-            <li>
+            <ul class="list benefits-list">
+            <li class="item">
                 <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li>
+            <li class="item">
                 <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                 <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li>
+            <li class="item">
                 <h3 class="title">ПЛАНУВАННЯ</h3>
                 <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
-            <li>
+            <li class="item">
                 <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
@@ -67,13 +67,13 @@
     <section class="activity section">
         <div class="container">
             <h2 class="title">Чим ми займаємося</h2>
-        <ul class="list">
-            <li>
+        <ul class="list activity-list">
+            <li class="item">
                 <img src="./images/img.jpg" alt="розробник пише код" width="370">
             </li>
-            <li>
+            <li class="item">
                 <img src="./images/img1.jpg" alt="ux-дизайнер вибирає макет для програми" width="370">
-            <li>
+            <li class="item">
                 <img src="./images/img2.jpg" alt="ui-дизайнер дивиться на палітру кольорів" width="370">
             </li>
         </ul>
