--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
     <!--Шапка сайта-->
     <header class="header">
-        <div class="container">
-            <nav>
+        <div class="header-nav container">
+            <nav class="nav">
             <a href="./index.html" class="logo"><span class="primary">Web</span><span class="secondary">Studio</span></a>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студія</a></li>
-                <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
+                <li class="item"><a href="./index.html" class="link">Студія</a></li>
+                <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                <li class="item"><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
         <ul class="contacts-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
     </div>
 
@@ -34,7 +34,7 @@
   <main>
     <!--Герой-->
     <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
         <button type="button" class="button">Замовити послугу</button>
     </section>
     
@@ -68,7 +68,7 @@
         <div class="container">
             <h2 class="title">Чим ми займаємося</h2>
         <ul class="list activity-list">
-            <li class="item">
+            <li class="item ">
                 <img src="./images/img.jpg" alt="розробник пише код" width="370">
             </li>
             <li class="item">
@@ -126,11 +126,11 @@
 <a href="./index.html" class="logo"><span class="primary">Web</span><span class="secondary white">Studio</span></a>
 <address>
     <ul class="contacts list">
-        <li><a href="https://goo.gl/maps/CDWquLzeUnctmw3z9" target="_blank" rel="noopener noreferrer nofollow"
+        <li class="item"><a href="https://goo.gl/maps/CDWquLzeUnctmw3z9" target="_blank" rel="noopener noreferrer nofollow"
                 class="link address">м. Київ, пр-т Лесі
                 Українки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+        <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
     </ul>
 </address>
         </div>
