--- a/portfolio.html
+++ b/portfolio.html
@@ -14,33 +14,37 @@
 
 <body>
     <!--Шапка сайта-->
-    <header>
-        <nav>
-            <a href="./index.html" class="logo"><span class="primary">Web</span><span
-                    class="secondary">Studio</span></a>
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студія</a></li>
-                <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-                <li><a href="" class="link">Контакти</a></li>
+    <header class="header">
+        <div class="header-nav container">
+            <nav class="nav">
+                <a href="./index.html" class="logo"><span class="primary">Web</span><span
+                        class="secondary">Studio</span></a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link">Студія</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                    <li class="item"><a href="" class="link">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="contacts-nav list">
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="contacts-nav list">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
+    
     </header>
-
    <main>
 
-    <section class="examples">
-        <h2 class="visually-hidden">Наші роботи</h2>
-        <ul class="list">
-            <li><button type="button" class="button">Усі</button></li>
-            <li><button type="button" class="button">Веб-сайти</button></li>
-            <li><button type="button" class="button">Додатки</button></li>
-            <li><button type="button" class="button">Дизайн</button></li>
-            <li><button type="button" class="button">Маркетинг</button></li>
+    <section class="examples section">
+        <div class="container">
+            <h2 class="visually-hidden">Наші роботи</h2>
+        <ul class="btn-list list">
+            <li class="item"><button type="button" class="button">Усі</button></li>
+            <li class="item"><button type="button" class="button">Веб-сайти</button></li>
+            <li class="item"><button type="button" class="button">Додатки</button></li>
+            <li class="item"><button type="button" class="button">Дизайн</button></li>
+            <li class="item"><button type="button" class="button">Маркетинг</button></li>
         </ul>
+       
 
         <ul class="list">
             <li>
@@ -89,6 +93,7 @@
                 <p class="category">Додаток</p>
             </li>
         </ul>
+        </div>
     </section>
 
    </main>
