--- a/portfolio.html
+++ b/portfolio.html
@@ -99,19 +99,22 @@
    </main>
 
     <!--Подвал-->
-    <footer class="footer">
+<footer class="footer">
+    <div class="container">
         <a href="./index.html" class="logo"><span class="primary">Web</span><span
                 class="secondary white">Studio</span></a>
         <address>
             <ul class="contacts list">
-                <li><a href="https://goo.gl/maps/CDWquLzeUnctmw3z9" target="_blank" rel="noopener noreferrer nofollow"
-                        class="link address">м. Київ, пр-т Лесі
+                <li class="item"><a href="https://goo.gl/maps/CDWquLzeUnctmw3z9" target="_blank"
+                        rel="noopener noreferrer nofollow" class="link address">м. Київ, пр-т Лесі
                         Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </address>
-    </footer>
+    </div>
+
+</footer>
 
 </body>
 
