--- a/portfolio.html
+++ b/portfolio.html
@@ -49,48 +49,66 @@
         <ul class="projects-list list">
             <li class="item">
                 <img src="./images/portfolio.jpg" alt="Сторінка веб-сайту" width="370" height="294">
-                <h3 class="projects">Технокряк</h3>
-                <p class="category">Веб-сайт</p>
+                <div class="design">
+                    <h3 class="projects">Технокряк</h3>
+                    <p class="category">Веб-сайт</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/portfolio1.jpg" alt="Боскетболісті" width="370" height="294">
-                <h3 class="projects">Постер New Orlean vs Golden Star</h3>
-                <p class="category">Дизайнт</p>
+                <div class="design">
+                    <h3 class="projects">Постер New Orlean vs Golden Star</h3>
+                    <p class="category">Дизайнт</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/portfolio2jpg.jpg" alt="Ріба" width="370" height="294">
-                <h3 class="projects">Ресторан Seafood</h3>
-                <p class="category">Додаток</p>
+                <div class="design">
+                    <h3 class="projects">Ресторан Seafood</h3>
+                    <p class="category">Додаток</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/portfolio3.jpg" alt="Комп'ютерні навушники" width="370" height="294">
-                <h3 class="projects">Проєкт Prime</h3>
-                <p class="category">Маркетинг</p>
+                <div class="design">
+                    <h3 class="projects">Проєкт Prime</h3>
+                    <p class="category">Маркетинг</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/portfolio4.jpg" alt="Дві коробки" width="370" height="294">
-                <h3 class="projects">Проєкт Boxes</h3>
-                <p class="category">Додаток</p>
+                <div class="design">
+                    <h3 class="projects">Проєкт Boxes</h3>
+                    <p class="category">Додаток</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/portfolio5.jpg" alt="Сторінка веб-сайту" width="370" height="294">
-                <h3 class="projects">Inspiration has no Borders</h3>
-                <p class="category">Веб-сай</p>
+                <div class="design">
+                    <h3 class="projects">Inspiration has no Borders</h3>
+                    <p class="category">Веб-сай</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/portfolio6.jpg" alt="Журнал" width="370" height="294">
-                <h3 class="projects">Видання Limited Edition</h3>
-                <p class="category">Дизайн</p>
+                <div class="design">
+                    <h3 class="projects">Видання Limited Edition</h3>
+                    <p class="category">Дизайн</p>
+                </div>
             </li>
             <li class="item">
                 <img src="./images/portfolio7.jpg" alt="Етикетка" width="370" height="294">
-                <h3 class="projects">Проєкт LAB</h3>
+                <div class="design">
+                    <h3 class="projects">Проєкт LAB</h3>
                 <p class="category">Маркетингт</p>
+            </div>
             </li>
             <li class="item">
                 <img src="./images/portfolio8jpg.jpg" alt="Людина працює за ноутбуком" width="370" height="294">
-                <h3 class="projects">Growing Business</h3>
-                <p class="category">Додаток</p>
+                <div class="design">
+                    <h3 class="projects">Growing Business</h3>
+                    <p class="category">Додаток</p>
+                </div>
             </li>
         </ul>
         </div>
