--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
                 <img src="./images/portfolio7.jpg" alt="Етикетка" width="370" height="294">
                 <div class="design">
                     <h3 class="projects">Проєкт LAB</h3>
-                <p class="category">Маркетингт</p>
+                <p class="category">Маркетинг</p>
             </div>
             </li>
             <li class="item">
