--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 </div>
             </li>
             <li class="item">
-                <img src="./images/portfolio2jpg.jpg" alt="Ріба" width="370" height="294">
+                <img src="./images/portfolio2jpg.jpg" alt="Риба" width="370" height="294">
                 <div class="design">
                     <h3 class="projects">Ресторан Seafood</h3>
                     <p class="category">Додаток</p>
